# EXERCICE_ADAPTATIF

./: .coverage  README.md  pyproject.toml
adap_exercice/: __main__.py  class_define.py  latex_fin.py  latex_q1.py  latex_q2.py  latex_q3.py  latex_q4.py  latex_q5.py  latex_q6.py  main.py  resolution.py
tests/: .coverage  test_class_define.py  test_latex.py  test_resolution.py
