[tool.poetry]
name = "adap-exercice"
version = "0.1.0"
description = "Library to create a tex and pdf file of an exercice of economics which can be modified by the user"
authors = ["Mathieu <mathieuveron@outlook.fr>, Baptiste <baptiste.nepveux@icloud.com>"]
readme = "README.md"
packages = [{include = "adap_exercice"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
sympy = "^1.11.1"
matplotlib = "^3.6.2"

[tool.poetry.scripts]
adap-exercice = "adap_exercice.main:app"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
